--- a/style.css
+++ b/style.css
@@ -30,3 +30,6 @@ h1 {color: brown;
         transform: translateX(0);
     }
 }
+h2 { font-size: 170%;}
+h2 {color: blueviolet;}
+h2 {text-align: center;}
